# django-oauth-toolkit

./: .coveragerc  .dockerignore  .editorconfig  .env  .env.sample.docker  .gitignore  .pep8  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  LICENSE  MANIFEST.in  README.rst  bundle.js  django-oauth-toolkit.sublime-project  docker-compose.yml  index.html  index.xml  main.css  manage.py  pyproject.toml  requirements.txt  runtests.py  setup.cfg  setup.py  sitemap.xml  test.sh  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: lint.yaml  release.yml  test.yml
categories/: index.xml
docs/: Makefile  advanced_topics.rst  api.rst  changelog.rst  conf.py  contributing.rst  extending_application.rst  getting_started.rst  glossary.rst  index.rst  install.rst  management_commands.rst  models.rst  oidc.rst  requirements.txt  resource_server.rst  rest_framework_integration  rfc.py  settings.rst  settings_generator.py  signals.rst  templates.rst  tutorial_01.rst  tutorial_02.rst  tutorial_03.rst  views.rst
docs/rest-framework/: getting_started.rst  openapi.yaml  permissions.rst  rest-framework.rst
docs/tutorial/: rest_framework_integration.rst  tutorial.rst  tutorial_01.rst  tutorial_02.rst  tutorial_03.rst  tutorial_04.rst  tutorial_05.rst  tutorial_06.rst  tutorials.rst
docs/views/: application.rst  class_based.rst  details.rst  function_based.rst  mixins.rst  token.rst  views.rst
example/: Procfile  requirements.txt  runtime.txt
example/example/: api_v1.py  context_processors.py  forms.py  middleware.py  models.py  settings.py  urls.py  views.py  wsgi.py
example/example/fixtures/: initial_data.json  oauth2_provider_fixtures.json
example/example/settings/: base.py  dev.py  production.py
example/foo/: generators.py
oauth2_provider/: __init__.py  admin.py  apps.py  backends.py  checks.py  compat.py  compat_handlers.py  decorators.py  exceptions.py  forms.py  generators.py  handlers.py  http.py  middleware.py  mixins.py  models.py  oauth2_backends.py  oauth2_validators.orig  oauth2_validators.py  scopes.py  settings.py  signals.py  tasks.py  tests.py  urls.py  utils.py  validators.py  views.py
oauth2_provider/contrib/rest_framework/: __init__.py  authentication.py  decorators.py  permissions.py
oauth2_provider/ext/rest_framework/: __init__.py  authentication.py  oauth2_backends.py  permissions.py  views.py
oauth2_provider/migrations/: 0001_initial.py  0001_squashed_0006_auto_20171012_2013.py  0002_08_updates.py  0002_auto_20150522_1231.py  0002_auto_20150623_0630.py  0002_auto_20171012_2324.py  0002_auto_20190406_1805.py  0002_auto__add_index_accesstoken_token.py  0002_swap_auth_user_model.py  0003_authorization_grant_type.py  0003_auto_20150909_1131.py  0003_auto_20151116_1247.py  0003_auto_20160316_1503.py  0003_auto_20190413_2007.py  0003_auto_20200902_2022.py  0003_auto_20201211_1314.py  0003_auto__add_applicationinstallation__del_field_application_user__del_fie.py  0003_not_editable.py  0004_application_algorithm.py  0004_application_allowed_scopes.py  0004_auto_20160525_1623.py  0004_auto_20161105_0159.py  0004_auto_20200902_2022.py  0004_idtoken.py  0005_accesstoken_id_token.py  0005_application_allowed_scopes.py  0005_auto_20161221_1906.py  0005_auto_20170514_1132.py  0005_auto_20170514_1141.py  0005_auto_20211222_2352.py  0005_idtoken.py  0006_accesstoken_id_token.py  0006_alter_application_client_secret.py  0006_auto_20170903_1632.py  0006_auto_20171012_2013.py  0006_auto_20171214_2232.py  0007_application_algorithm.py  0007_application_post_logout_redirect_uris.py  0007_authorization_grant_type.py  0007_auto_20181018_1538.py  (+24 more)
oauth2_provider/south_migrations/: 0001_initial.py  0002_adding_indexes.py  0003_auto__add_field_application_skip_authorization__chg_field_accesstoken_.py  0004_add_field_refreshtoken_created_and_modified.py
oauth2_provider/templates/: 404.html
oauth2_provider/templatetags/: compat.py
oauth2_provider/tests/: __init__.py  models.py  settings.py  test_application_views.py  test_auth_backends.py  test_authorization_code.py  test_client_credential.py  test_cors_middleware.py  test_decorators.py  test_generator.py  test_implicit.py  test_mixins.py  test_models.py  test_oauth2_backends.py  test_oauth2_validators.py  test_password.py  test_rest_framework.py  test_scopes.py  test_token_revocation.py  test_token_view.py  test_utils.py  test_validators.py  test_views.py  urls.py
oauth2_provider/views/: __init__.py  application.py  base.py  device.py  generic.py  http.py  introspect.py  mixins.py  oidc.py  openid_connect.py  token.py  util.py
requirements/: base.txt  development.txt  optional.txt  project.txt  testing.txt
tags/: index.xml
tests/: __init__.py  admin.py  common_testing.py  conftest.py  custom_hasher.py  db_router.py  mig_settings.py  models.py  multi_db_settings.py  multi_db_settings_invalid_token_configuration.py  presets.py  settings.py  settings_swapped.py  test_application_views.py  test_auth_backends.py  test_authorization_code.py  test_backchannel_logout.py  test_client_credential.py  test_commands.py  test_cors.py  test_cors_middleware.py  test_decorators.py  test_device.py  test_django_checks.py  test_generator.py  test_hybrid.py  test_implicit.py  test_introspection_auth.py  test_introspection_view.py  test_mixins.py  test_models.py  test_oauth2_backends.py  test_oauth2_validators.py  test_oidc_views.py  test_oob_authorization.py  test_password.py  test_rest_framework.py  test_scopes.py  test_scopes_backend.py  test_session_management.py  (+11 more)
tests/app/: README.md
tests/app/idp/: README.md  manage.py  (+1 more)
tests/migrations/: 0001_initial.py  0002_swapped_models.py  0003_basetestapplication_post_logout_redirect_uris_and_more.py  0004_basetestapplication_hash_client_secret_and_more.py  0005_basetestapplication_allowed_origins_and_more.py  0006_add_localidtoken.py  0006_basetestapplication_token_family.py  0007_add_localidtoken.py
(+52 files in other folders)
