[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "django_oauth_toolkit"
version = "1.3.3"
description = "Common packages"
authors = []
packages = [
    { include = "oauth2_provider" },
]
exclude = [
    "tests",
]

[tool.poetry.dependencies]
django =  ">= 2.2"
requests =  ">= 2.13.0"
oauthlib =  ">= 3.1.0"
python = "==3.9.6"

[tool.poetry.dev-dependencies]
