[metadata]
name = django-oauth-toolkit
version = 1.4.1
description = OAuth2 Provider for Django
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Federico Frenguelli, Massimiliano Pippi
author_email = synasius@gmail.com
url = https://github.com/jazzband/django-oauth-toolkit
keywords = django, oauth, oauth2, oauthlib
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Web Environment
	Framework :: Django
	Framework :: Django :: 2.2
	Framework :: Django :: 3.0
	Framework :: Django :: 3.1
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: Internet :: WWW/HTTP

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
	django >= 2.2
	requests >= 2.13.0
	oauthlib >= 3.1.0

[options.packages.find]
exclude = tests
