[metadata]
name = django-oauth-toolkit
version = attr: oauth2_provider.__version__
description = OAuth2 Provider for Django
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Federico Frenguelli, Massimiliano Pippi
author_email = synasius@gmail.com
url = https://github.com/jazzband/django-oauth-toolkit
keywords = django, oauth, oauth2, oauthlib
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Web Environment
	Framework :: Django
	Framework :: Django :: 2.2
	Framework :: Django :: 3.2
	Framework :: Django :: 4.0
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Topic :: Internet :: WWW/HTTP

[options]
packages = find:
include_package_data = True
zip_safe = False
# jwcrypto has a direct dependency on six, but does not list it yet in a release
# Previously, cryptography also depended on six, so this was unnoticed
install_requires =
	django >= 2.2, <= 4.1
	requests >= 2.13.0
	oauthlib >= 3.1.0
	jwcrypto >= 0.8.0

[options.packages.find]
exclude =
	tests
	tests.*
